--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "node server/index.js"
+    "start": "nodemon server/index.js"
+  },
+  "dependencies": {
+    "nodemon": "^3.1.7"
   }
 }
